feat: SGCluster CRD and Resource changes to integrate it with the Object Storage